--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,13 @@ pandas = "^2.2.3"
 scikit-learn = "^1.5.2"
 streamlit = "^1.40.2"
 matplotlib = "^3.9.3"
+pyttsx3 = "^2.98"
+speechrecognition = "^3.11.0"
+pyaudio = "^0.2.14"
+duckduckgo-search = "^6.3.7"
+wikipedia = "^1.4.0"
+beautifulsoup4 = "^4.12.3"
+pywhatkit = "^5.4"
 
 
 [tool.poetry.group.dev.dependencies]
